# vaku

./: .codacy.yml  .codeclimate.yml  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  .mdlrc  .pre-commit-config.yaml  .remarkignore  .remarkrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  renovate.json  wrangler.toml
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml
api/: client.go  client_test.go  doc.go  error.go  error_test.go  folder_copy.go  folder_copy_all_versions.go  folder_copy_all_versions_test.go  folder_copy_test.go  folder_delete.go  folder_delete_meta_test.go  folder_delete_test.go  folder_destroy.go  folder_destroy_test.go  folder_list.go  folder_list_test.go  folder_move.go  folder_move_all_versions.go  folder_move_all_versions_test.go  folder_move_test.go  folder_read.go  folder_read_test.go  folder_search.go  folder_search_test.go  folder_write.go  folder_write_test.go  helpers.go  helpers_test.go  main_test.go  mount_provider.go  mounts.go  mounts_test.go  path_copy.go  path_copy_all_versions.go  path_copy_all_versions_test.go  path_copy_test.go  path_delete.go  path_delete_meta_test.go  path_delete_test.go  path_destroy.go  (+20 more)
cmd/: cli.go  cli_test.go  completion.go  completion_test.go  doc.go  docs.go  docs_test.go  flags.go  flags_test.go  folder.go  folder_copy.go  folder_copy_test.go  folder_delete.go  folder_delete_meta.go  folder_delete_meta_test.go  (+42 more)
(+262 files in other folders)
