[package]
name = "vaku"
version = "3.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "A CLI and library that extend the official Vault client with path- and folder-based operations on the K/V secret engine."
repository = "https://github.com/lingrino/vaku"
homepage = "https://vaku.dev"
readme = "README.md"
keywords = ["vault", "hashicorp", "cli", "secrets"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "vaku"
path = "src/lib.rs"

[[bin]]
name = "vaku"
path = "src/main.rs"

[dependencies]
async-channel = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
dirs = "5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
testcontainers = "0.21"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
